--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
-    "nce": "0.0.1",
+    "nce": "0.1.0",
+    "nce-extension-manager": "0.0.1",
     "nce-winston": "0.0.2"
   },
   "peerDependencies": {
+    "nce": "0.1.0",
     "nce-winston": "0.0.2"
   }
 }
